# genai-boilerplate-python

./: .env.example  .gitignore  DOCKER_BUILD_FIXES.md  LICENSE  Makefile  NAVIGATION_ISSUE.md  README.md  SIDEBAR_REFRESH_IMPLEMENTATION.md  THEME_IMPLEMENTATION.md  THEME_SYSTEM_SUMMARY.md  docker-compose.prod.yml  docker-compose.yml  test_navigation.py
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  mock_server.py  pyproject.toml  requirements.txt
backend/config/: ai_models.py  settings.py
backend/scripts/: init_db.py  test_auth.py
backend/src/: THEME_IMPLEMENTATION_COMPLETE.md  __init__.py  main.py
backend/src/api/: __init__.py  admin.py  auth.py  chat.py  documents.py  themes_simple.py  websocket.py
backend/src/api/routes/: themes.py
backend/src/api/v1/: __init__.py  router.py
backend/src/auth/: dependencies.py
backend/src/core/: __init__.py  cache.py  database.py  exceptions.py  genai_client.py  logging.py
backend/src/database/: __init__.py  session.py
backend/src/docs/: THEME_SYSTEM.md
backend/src/models/: __init__.py  auth.py  chat.py  theme.py
backend/src/services/: __init__.py  auth_service.py  chat_service.py  document_service.py  health.py  memory_service.py  persona_service.py  theme_init_service.py  theme_service.py  websocket_manager.py
backend/src/startup/: theme_init.py
backend/src/tests/: conftest.py  test_theme_init.py  test_theme_service.py  theme_summary.py  validate_themes.py
backend/tests/bdd/: conftest.py  test_authentication.py  test_navigation.py
backend/tests/bdd/features/: authentication.feature  chat_functionality.feature  navigation.feature
backend/tests/bdd/step_definitions/: test_navigation_steps.py
backend/tests/bdd/steps/: authentication_steps.py
deployments/kubernetes/: backend.yaml  configmap.yaml  frontend.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml
docs/: ARCHITECTURE.md  DOCKER_DEPLOYMENT.md  KUBERNETES_DEPLOYMENT.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  test-theme-system.cjs
frontend/frontend/: debug-test.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: DarkModeToggle.tsx  ErrorBoundary.tsx  Layout.tsx  NavigationMonitor.tsx  ThemeSelector.tsx
frontend/src/contexts/: SimplifiedThemeProvider.tsx  ThemeApplicationContext.tsx  ThemeContext.tsx  theme-constants.ts  useTheme.ts
frontend/src/hooks/: useThemeApplication.ts
frontend/src/pages/: AdminPage.tsx  ChatPage.tsx  DocumentsPage.tsx  SettingsPage.tsx
frontend/src/utils/: globalThemeManager.ts
frontend/tests/bdd/features/: authentication.feature  chat_interface.feature
scripts/: docker-push.sh
